--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "7ac4095e",
    "metadata": {},
    "outputs": [],
@@ -52,8 +52,8 @@
     "filter_name = 'F150W'\n",
     "detector_name = 'nrcb4'\n",
     "wisp_path = './library'\n",
-    "from nmfwisp import estimate_wisp\n",
-    "wisp, wisp_e = estimate_wisp(data, err, mask, wisp_path, detector_name, filter_name, correct_1f=False)\n",
+    "from nmfwisp import fit_wisp\n",
+    "wisp, wisp_e = fit_wisp(data, err, mask, wisp_path, detector_name, filter_name, correct_1f=False)\n",
     "updated_err = np.sqrt(err**2 + wisp_e**2)"
    ]
   },
